fixed wrong css and eliminated code duplication

--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -1,6 +1,6 @@
 .popup__input{
     width: 358px;
-    margin: 0 36px 29.74px;
+    margin: 0 36px;
     padding: 0;
     padding-bottom: 13.26px;
     box-sizing: border-box;
@@ -9,6 +9,10 @@
     outline: 0;
     font-size: 14px;
     line-height: 17px;
+}
+
+.popup__input:last-of-type {
+  margin-top: 29.74px;
 }
 
 
